; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_tree.c_test_diff_tree__regular_blob_mode_changed_to_executable_file.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_tree.c_test_diff_tree__regular_blob_mode_changed_to_executable_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32 }

@.str = private unnamed_addr constant [7 x i8] c"806999\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"a8595c\00", align 1
@expect = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@GIT_DELTA_DELETED = common dso_local global i64 0, align 8
@GIT_DELTA_MODIFIED = common dso_local global i64 0, align 8
@GIT_DELTA_ADDED = common dso_local global i64 0, align 8
@GIT_DELTA_TYPECHANGE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_diff_tree__regular_blob_mode_changed_to_executable_file() #0 {
  %1 = call i32 @process_tree_to_tree_diffing(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @expect, i32 0, i32 1), align 8
  %3 = call i32 @cl_assert_equal_i(i32 1, i32 %2)
  %4 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @expect, i32 0, i32 0), align 8
  %5 = load i64, i64* @GIT_DELTA_DELETED, align 8
  %6 = getelementptr inbounds i32, i32* %4, i64 %5
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @cl_assert_equal_i(i32 0, i32 %7)
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @expect, i32 0, i32 0), align 8
  %10 = load i64, i64* @GIT_DELTA_MODIFIED, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @cl_assert_equal_i(i32 1, i32 %12)
  %14 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @expect, i32 0, i32 0), align 8
  %15 = load i64, i64* @GIT_DELTA_ADDED, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @cl_assert_equal_i(i32 0, i32 %17)
  %19 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @expect, i32 0, i32 0), align 8
  %20 = load i64, i64* @GIT_DELTA_TYPECHANGE, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @cl_assert_equal_i(i32 0, i32 %22)
  ret void
}

declare dso_local i32 @process_tree_to_tree_diffing(i8*, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
